@@ -2,11 +2,18 @@ package com.learnjava.data;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.function.Supplier;
 
 public class StudentDataBase {
     public static Supplier<Student> studentSupplier  = ()->{
-        return new Student("sai",2,3.6,"male", Arrays.asList("swimming","basketball","volleyball"));
+        Student student =  new Student("sai",2,3.6,"male", Arrays.asList("swimming","basketball","volleyball"));
+        Bike bike = new Bike();
+        bike.setModel("model");
+        bike.setName("first");
+        student.setBike(Optional.of(bike));
+        student.setListBike(List.of(bike,bike,bike));
+        return student;
     };
     public static List<Student> getAllStudents() {
 
